--- a/src/styles.css
+++ b/src/styles.css
@@ -19,19 +19,21 @@ h1 {
 }
 
 form {
-  padding: 30px;
-  background-color: white;
-  box-shadow: 0 20px 60px rgba(65, 50, 100, 0.08);
-  border-radius: 10px;
   display: flex;
-  margin-bottom: 30px;
 }
-
+.form-container {
+  background-color: white;
+  margin-bottom: 30px;
+  border-radius: 10px;
+  box-shadow: 0 20px 60px rgba(65, 50, 100, 0.08);
+  padding: 15px 20px;
+}
 .instructions {
   padding: 16px;
   border: 1px solid rgba(39, 33, 66, 0.5);
   width: 80%;
   font-size: 16px;
+  border-radius: 50px;
   line-height: 20px;
   color: #272044;
 }
@@ -41,8 +43,16 @@ form {
   background: #885df1;
   color: white;
   border: none;
+  width: 150px;
+  font-size: 16px;
   border-radius: 50px;
   padding: 14px 24px;
+}
+.hint {
+  line-height: 1.5;
+  margin-top: 5px;
+  opacity: 0.6;
+  font-size: 12px;
 }
 .poem {
   font-size: 16px;
@@ -51,6 +61,9 @@ form {
   line-height: 24px;
   border-left: 3px solid #885df1;
   box-shadow: 0 4px 30px 0 rgba(39, 33, 66, 0.03);
+}
+.hidden {
+  display: none;
 }
 footer {
   text-align: center;
@@ -64,4 +77,18 @@ a {
 
 .poem strong {
   color: purple;
+}
+.generating {
+  animation: blink-animation 1s steps(5, start) infinite;
+}
+
+@keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
+@-webkit-keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
 }
